2002-06-21  Don Porter  <dgp@users.sourceforge.net>

	* library/init.tcl:  Corrected comments and namespace style
	issues.  Thanks to Bruce Stephens. [Bug 572025]

2002-06-06  Daniel Steffen  <das@users.sourceforge.net>

	* unix/tclUnixInit.c (TclpSetInitialEncodings): 8.4 backport 
	of default fallback encoding set with TCL_DEFAULT_ENCODING
	* unix/tcl.m4 (Darwin): set TCL_DEFAULT_ENCODING to utf-8 on
	MacOSX (where posix file apis expect utf-8, not iso8859-1).
	* unix/configure: regen
	* unix/Makefile.in: set DYLD_LIBRARY_PATH in parallel
	to LD_LIBRARY_PATH for MacOSX dynamic linker.
	* generic/tclEnv.c (TclSetEnv): fix env var setting on
	MacOSX (adapted from patch #524352 by jkbonfield).

2002-06-05  Daniel Steffen  <das@users.sourceforge.net>

	* mac/tclMacResource.c (Tcl_MacConvertTextResource): added utf
	conversion of text resource contents.
	* mac/tclMacResource.c (Tcl_MacEvalResource): overlooked 8.4
	backport of resource name utf conversion.
	* tests/macFCmd.test (macFCmd-1.2): allow CWIE creator.
	* tests/ioCmd.test (iocmd-8.15): added mac specific result string.

2002-05-24  Jeff Hobbs  <jeffh@ActiveState.com>

	* tests/clock.test: added clock-9.1
	* compat/strftime.c:
	* generic/tclClock.c:
	* generic/tclInt.decls:
	* generic/tclIntDecls.h:
	* unix/tclUnixTime.c: fix for Windows msvcrt mem leak caused by
	using an env(TZ) setting trick for in clock format -gmt 1.  This
	also makes %s seem to work correctly with -gmt 1 as well as
	making it a lot faster by avoid the env(TZ) hack.  TclpStrftime
	now takes useGMT as an arg.  [Bug #559376]

2002-05-20  Daniel Steffen  <das@users.sourceforge.net>

	* mac/tclMacChan.c: use MSL provided creator type if available
	instead of the default 'MPW '.

2002-04-26  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/configure:
	* unix/tcl.m4: change HP-11 SHLIB_LD_LIBS from "" to ${LIBS} so
	that the .sl knows its dependent libs.

2002-04-26  Donal K. Fellows  <fellowsd@cs.man.ac.uk>
